Starting JS w/ additional HTML edits

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
   <main>
     <form class="search">
       <!--TEMPORARY SEARCH FUNCTION; WILL BE DELEGATED TO ANOTHER PAGE-->
-      <input type="text" name="pokemon" placeholder="Who's that Pokemon?" id="pokemonSearch" />
-      <input type="submit" placeholder="GO" id="submitButton" />
+      <input type="text" name="pokemon" placeholder="Who's that Pokémon?" id="pokemonSearch" />
+      <button id="submit">GO!</button>
+      <!-- <input type="submit" placeholder="GO" id="submitButton" /> -->
     </form>
 
     <div class="picture">
