--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
   <header>
-    <h1 class="top-of-page">
+    <div class="topOfPage">
       <!--Append Pokemon Name Here w. JS-->
-    </h1>
+    </div>
     <div class="pokedexID">
     </div>
   </header>
@@ -46,6 +46,5 @@
     </div>
   </footer>
 </body>
-
 
 </html>
