Appended info from the API to the DOM

--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
   <header>
     <div class="topOfPage">
       <!--Append Pokemon Name Here w. JS-->
+      <h1 id="name"></h1>
     </div>
     <div class="pokedexID">
+      <p id="idNum"></p>
     </div>
-  </header>
-
-  <main>
     <form class="search">
       <!--TEMPORARY SEARCH FUNCTION; TO BE DELEGATED TO ANOTHER PAGE-->
       <input type="text" name="pokemon" placeholder="Who's that Pokémon?" value="" id="pokemonSearch" />
       <button id="submit">GO!</button>
       <!-- <input type="submit" placeholder="GO" id="submitButton" /> -->
     </form>
+  </header>
 
+  <main>
     <div class="picture">
+      <img id="spritePic">
       <!--Sprite Images from API Appended Here-->
     </div>
 
