Basic JS Completed

--- a/index.html
+++ b/index.html
@@ -38,13 +38,11 @@
       <!-- Pokemon Type from API Appended Here-->
     </div>
 
-    <div class="base-stats">
-      <!-- Base stats (strength & defense) appended here-->
-    </div>
   </main>
   <footer>
     <div class="info">
       <!--Append Pokedex Entry Here-->
+      <p id="flavorText"></p>
     </div>
   </footer>
 </body>
