Added a font-family

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap" rel="stylesheet">
   <title>Pokedex v1</title>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script defer src="app.js"></script>
-
 </head>
 
 <body>
@@ -19,8 +19,6 @@
   <div class="logo">
     <img src="Assets/Pokedex-sign-logo.png" id="logo">
   </div>
-
-
 
   <main>
     <div class="pokedexWithSprite">
